--- a/adverts/templates/adverts/details-advert.html
+++ b/adverts/templates/adverts/details-advert.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="carousel-inner" style="width: 100%; height: 100%">
                     {% for picture in advert_infos.pictures %}
-                        <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ advert_infos.id }}/{{ picture }}')"></div>
+                        <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% static '/images/adverts-pictures/' %}{{ advert_infos.id }}/{{ picture }}')"></div>
                     {% endfor %}
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel" data-bs-slide="prev">
