--- a/adverts/templates/includes/all_adverts.html
+++ b/adverts/templates/includes/all_adverts.html
@@ -12,7 +12,7 @@
             </div>
             <div class="carousel-inner">
                 {% for picture in advert.pictures %}
-                    <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ advert.id }}/{{ picture }}')"></div>
+                    <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% static '/images/adverts-pictures/' %}{{ advert.id }}/{{ picture }}')"></div>
                 {% endfor %}
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="prev">
