--- a/adverts/templates/includes/other-properties.html
+++ b/adverts/templates/includes/other-properties.html
@@ -11,13 +11,13 @@
                 </div>
                 <div class="carousel-inner" style="height: 200px">
                   <div class="carousel-item h-100 active">
-                    <img src="https://picsum.photos/200/100" class="d-block w-100" alt="...">
+                    <img src="http://placeimg.com/740/480/arch" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item h-100">
-                    <img src="https://picsum.photos/200/200" class="d-block w-100" alt="...">
+                    <img src="http://placeimg.com/740/480/arch" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item h-100">
-                    <img src="https://picsum.photos/200/150" class="d-block w-100" alt="...">
+                    <img src="http://placeimg.com/740/480/arch" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators{{prop.id}}" data-bs-slide="prev">
